[package]
name = "music_player"
version = "0.1.0"
authors = ["Adam Hlavatovic <adam.hlavatovic@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "^0.3.0"
gtk = "^0.3.0"
gdk-pixbuf = "^0.3.0"
id3 = "^0.2.0"
