[package]
name = "tetris"
version = "0.0.1"
authors = ["Adam Hlavatovic <adam.hlavatovic@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sdl2/image", "sdl2/ttf"]

[dependencies]
sdl2 = "0.30.0"
rand = "0.3"
