[package]
name = "adder"
version = "0.1.0"
authors = ["Adam Hlavatovic <adam.hlavatovic@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.5.5"
add-one = { path = "../add-one" }
add-two = { path = "../add-two" }
